--- a/backstages/catalog-model/examples/api/hello-world-api.yaml
+++ b/backstages/catalog-model/examples/api/hello-world-api.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: grpc
   lifecycle: deprecated
-  owner: team-c
+  owner: team-ddd
   definition: |
     // Copyright 2015 gRPC authors.
     //
